trying to fix the back to top button sizin on mobile screens

--- a/assets/css/melpdesigns.css
+++ b/assets/css/melpdesigns.css
@@ -662,8 +662,8 @@ a.button.back-portfolio:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 50px;
-  width: 50px;
+  height: 50px !important;
+  width: 50px !important;
   position: fixed !important;
   bottom: 80px;
   right: 20px;
