--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -414,8 +414,8 @@ a.button.back-portfolio:hover {
   justify-content:center;
   align-content:center;
   align-items:center;
-  height: 50px;
-  width: 50px;
+  height: 50px !important;
+  width: 50px !important;
   position: fixed !important;
   bottom: 80px;
   right: 20px;
